--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,35 @@
 }
 
 #logo {
-	height: 50px;
-	margin:2%;
+	height: 45px;
+	margin:3%;
+}
+
+h1 {
+	font-size: 3rem;
+}
+
+p {
+	font-size: 1.2rem;
+}
+
+.contactsp {
+	display: inline-block;
+	padding-left: 15px;
+}
+
+li div {
+	display: flex;
+	align-items: center;	
+}
+
+
+
+
+
+
+
+
+@media (max-width: 600px) {
+  #sidebar {display: none;}
 }
