--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 
 #logo {
 	height: 45px;
-	margin:3%;
+	margin:4%;
 }
 
 h1 {
@@ -48,6 +48,15 @@ li div {
 
 
 
-@media (max-width: 600px) {
-  #sidebar {display: none;}
+@media (max-width: 800px) {
+  #logo {
+	
+/*	margin: 3% 0% 0% 30%;*/
+}
+
+h1 {
+	font-size: 2.2rem;
+	margin: 5% 0;
+}
+
 }
