--- a/css/style.css
+++ b/css/style.css
@@ -45,18 +45,28 @@ li div {
 	width: 100%;
 }
 
+#mainpic {
+	width: 100%;
+	height: 500px;
+	background: url('../pic/net.png') no-repeat;
+	background-size: contain; 
+}
+
+
 
 
 
 @media (max-width: 800px) {
-  #logo {
-	
-/*	margin: 3% 0% 0% 30%;*/
-}
 
-h1 {
-	font-size: 2.2rem;
-	margin: 5% 0;
-}
+	h1 {
+		font-size: 2.2rem;
+		margin: 5% 0;
+	}
+
+
+	#mainpic {
+		display: none; 
+	}
+
 
 }
